2004-07-11  Remi Denis-Courmont

	* src/teredo-udp.cpp:
	- fixed call to recvfrom() that caused problems with
	  determining UDP packets source,
	* src/server.cpp:
	- fixed likely byte-alignments issues (teredo_send_ra),
	- clean up, use of MiredoServer class

2004-07-10  Remi Denis-Courmont

	* libtun6.ipv6-tunnel.c:
	- no longer (try to) bring iface down in ~IPv6Tunnel(),
	* configure.ac:
	- removed --enable-miredo-user and --enable-miredo-group,
	* src/main.c:
	- support for chroot(),
	- ability to override setuid user from the command line,
	* src/relay.cpp:
	- do not print routing warning when receiving multicast packet,
	* src/miredo.cpp:
	- daemonize before setuid,
	- ability to reload (not yet existing) the configuration file,
	- initial signal handling.

2004-06-27  Remi Denis-Courmont

	* include/teredo.c:
	- allow unknown Teredo address flags, as specified per new draft 02,
	* src/server_pkt.cpp:
	- clean ups,
	- set IPv6 source correctly in server Router Advertisements,
	* src/relay.cpp, src/server_pkt.cpp:
	- check that destination matches 2000:/3 before transmitting,
	- use user-specified Teredo prefix, rather than hardcoded one,
	* libtun6/ipv6-tunnel.cpp, libtun6/ipv6-tunnel.h:
	- sanity checks,
	- fix byte ordering for sending/receiving packets on FreeBSD,
	- separated from Miredo's own sources.

2004-06-26  Remi Denis-Courmont

	* miredo.8, Makefile.am:
	- initial man page,
	* src/miredo.cpp, src/relay.cpp:
	- removed useless memory checks (the program will be killed if we run
	  out of memory anyway),
	- check that server primary IPv4 address is a global unicast one.

2004-06-25  Remi Denis-Courmont

	* src/ipv6-tunnnel.cpp:
	- compile fix for broken pre-08-2003 Kame implementations,
	- fixed support for adding/deleting tunnel addresses on FreeBSD.

2004-05-24  Remi Denis-Courmont

	* src/ipv6-tunnel.cpp:
	- support for FreeBSD tunneling driver (still a stupid compilation
	  error, routing change not implemented).

2004-05-20  Remi Denis-Courmont